--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Orbitron', sans-serif;
 }
 body{
     display: flex;
@@ -44,24 +46,18 @@ form input{
 .label-form_1{
     position: absolute;
     top: 31%;
-    right: 58%;
+    right: 45%;
     cursor:text;
     color: #9C9C9C;
-    font-size: 14px;
+    font-size: 1.2vw;
 }
 .label-form_2{
     position: absolute;
     top: 67%;
-    right: 76.5%;
+    right: 72%;
     cursor:text;
     color: #9C9C9C;
-    font-size: 14px;
-}
-input::placeholder{
-    position: relative;
-    bottom: 25%;
-    left: 2%;
-    text-transform:capitalize;
+    font-size: 1.2vw;
 }
 .botao{
     display: flex;
@@ -144,4 +140,60 @@ p{
 .jogo img{
     width: 100%;
     height: 90%;
+}
+@media only screen and (max-width: 800px){
+    .login figure img{
+        width: 25vw;
+    }
+    .jogo{
+        width: 100%;
+        z-index: -1;
+    }
+    .jogo img{
+        width: 100%;
+        height: 125%;
+    }
+    .login{
+        position: absolute;
+        right: 32%;
+        font-size: 3vw;
+    }
+    form h1{
+        font-size: 3vw;
+        color:aquamarine;
+    }
+    form input{
+        height: 6.5vh;
+    }
+    .label-form_1{
+        top: 36%;
+        right: 30%;
+        font-size: 2vw;
+    }
+    .label-form_2{
+        top: 69%;
+        right: 65%;
+        font-size: 2vw;
+    }
+    .redes-sociais img{
+        width: 2.5vw;
+    }
+    .facebook{
+        width: 8vw;
+    }
+    .google{
+        width: 8vw;
+    }
+    .apple{
+        width: 8vw;
+    }
+    button{
+        width: 8vw;
+    }
+    button img{
+        width: 6vw;
+    }
+    .conectado label{
+        color:aquamarine;
+    }
 }
